# FYT2024_vision

./: .clang-format  .gitignore  README.md
rm_auto_aim/: README.md
rm_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/armor_detector/cmake_modules/: FindG2O.cmake
rm_auto_aim/armor_detector/include/armor_detector/: armor_detector.hpp  armor_detector_node.hpp  armor_pose_estimator.hpp  armor_pose_solver.hpp  ba_solver.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  types.hpp
rm_auto_aim/armor_detector/model/: label.txt  lenet.onnx  mlp.onnx
rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp  armor_pose_solver.cpp  ba_solver.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp
rm_auto_aim/armor_detector/test/: test_detector.cpp  test_node_startup.cpp
rm_auto_aim/armor_solver/: CMakeLists.txt  README.md  package.xml
rm_auto_aim/armor_solver/include/armor_solver/: armor_solver.hpp  armor_solver_node.hpp  armor_tracker.hpp  motion_model.hpp
rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
rm_auto_aim/armor_solver/test/: test_node_startup.cpp
rm_auto_aim/rm_auto_aim/: CMakeLists.txt  package.xml
rm_bringup/config/: camera_info.yaml  launch_params.yaml
rm_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  camera_driver_params.yaml  rune_detector_params.yaml  rune_solver_params.yaml  serial_driver_params.yaml  video_player_params.yaml  virtual_serial_params.yaml
rm_bringup/launch/: bringup.launch.py  bringup_navigation.launch.py
rm_hardware_driver/rm_camera_driver/: CMakeLists.txt  README.md  package.xml
rm_hardware_driver/rm_camera_driver/include/daheng/: GxIAPI.h
rm_hardware_driver/rm_camera_driver/include/rm_camera_driver/: daheng_camera.hpp  recorder.hpp
rm_hardware_driver/rm_camera_driver/lib/x86_64/: GxGVTL.cti  libgxiapi.so.1.0.1904.8241
rm_hardware_driver/rm_camera_driver/src/: daheng_camera.cpp  recorder.cpp  video_player.cpp
rm_hardware_driver/rm_serial_driver/: CMakeLists.txt  README.md  package.xml
rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/: fixed_packet.hpp  fixed_packet_tool.hpp  protocol.hpp  protocol_factory.hpp  serial_driver_node.hpp  transporter_interface.hpp  uart_transporter.hpp
rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/protocol/: default_protocol.hpp  infantry_protocol.hpp  sentry_protocol.hpp
rm_hardware_driver/rm_serial_driver/src/: serial_driver_node.cpp  virtual_serial_node.cpp
rm_hardware_driver/rm_serial_driver/src/protocol/: default_protocol.cpp  infantry_protocol.cpp  sentry_protocol.cpp
rm_hardware_driver/rm_serial_driver/src/transporter_driver/: uart_transporter.cpp
rm_hardware_driver/rm_serial_driver/test/: dummy_transporter.hpp  test_fixed_packet_tool.cpp
rm_interfaces/: CMakeLists.txt  package.xml
rm_interfaces/msg/: Armor.msg  Armors.msg  ChassisCmd.msg  DebugArmor.msg  DebugArmors.msg  DebugLight.msg  DebugLights.msg  DebugRuneAngle.msg  GimbalCmd.msg  JudgeSystemData.msg  OperatorCommand.msg  RuneTarget.msg  SerialReceiveData.msg  Target.msg
rm_interfaces/srv/: SetMode.srv
rm_robot_description/: README.md
rm_robot_description/urdf/: rm_gimbal.urdf.xacro  sentry.urdf.xacro
rm_rune/: README.md
rm_rune/rm_rune/: CMakeLists.txt  package.xml
rm_rune/rune_detector/: CMakeLists.txt  README.md  package.xml
rm_rune/rune_detector/include/rune_detector/: rune_detector.hpp  rune_detector_node.hpp  types.hpp
rm_rune/rune_detector/model/: yolox_rune.xml  yolox_rune_3.6m.onnx  yolox_rune_3.6m.xml
rm_rune/rune_detector/src/: rune_detector.cpp  rune_detector_node.cpp
rm_rune/rune_detector/test/: test_detector.cpp  test_node_startup.cpp
rm_rune/rune_solver/: CMakeLists.txt  README.md  package.xml
rm_rune/rune_solver/include/rune_solver/: curve_fitter.hpp  motion_model.hpp  rune_solver.hpp  rune_solver_node.hpp  types.hpp
rm_rune/rune_solver/src/: curve_fitter.cpp  rune_solver.cpp  rune_solver_node.cpp
rm_rune/rune_solver/test/: test_node_startup.cpp
rm_upstart/: README.md  register_service.sh  rm_clean_up.sh  rm_watch_dog.sh
rm_utils/: CMakeLists.txt  README.md  package.xml
rm_utils/include/rm_utils/: assert.hpp  common.hpp  heartbeat.hpp  url_resolver.hpp
rm_utils/include/rm_utils/logger/: README.md  exception.hpp  log.hpp  logger_pool.hpp  types.hpp
rm_utils/include/rm_utils/logger/impl/: global_mutex.hpp  logger_impl.hpp  writer.hpp
rm_utils/include/rm_utils/math/: extended_kalman_filter.hpp  manual_compensator.hpp  particle_filter.hpp  pnp_solver.hpp  trajectory_compensator.hpp  utils.hpp
rm_utils/src/: heartbeat.cpp  url_resolver.cpp
rm_utils/src/logger/: logger_impl.cpp  logger_pool.cpp  writer.cpp
rm_utils/src/math/: extended_kalman_filter.cpp  manual_compensator.cpp  particle_filter.cpp  pnp_solver.cpp  trajectory_compensator.cpp  utils.cpp
