<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_utils</name>
  <version>0.9.0</version>
  <description>
    robomaster tool package for projectile motion,it's helpful to develop application like Auto-Aim,etc.
  </description>
  <maintainer email="fyt@csu.edu.cn">zhenpeng ge</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>fmt</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>
  <depend>ceres</depend>
  <depend>rcpputils</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
